fix horizontal scroll bug in mobile safari

--- a/app.css
+++ b/app.css
@@ -158,6 +158,7 @@ body.playing #play-button::before {
 #droplets-wrapper {
   bottom: 0;
   left: 0;
+  overflow: hidden;
   position: absolute;
   right: 0;
   top: 0;
